[package]
name = "syscoin"
version = "0.16.14"
authors = ["Jagdeep Sidhu <jsidhu@blockchainfoundry.co>"]
license = "CC0-1.0"
homepage = "https://github.com/syscoin/rust-bitcoin/"
repository = "https://github.com/syscoin/rust-bitcoin/"
documentation = "https://docs.rs/syscoin/"
description = "General purpose library for using and interoperating with Syscoin and other cryptocurrencies with AUXPOW support."
keywords = [ "crypto", "bitcoin", "syscoin" ]
readme = "README.md"

[lib]
name = "bitcoin"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
serde-decimal = ["use-serde", "strason"]
unstable = []
use-serde = ["serde", "bitcoin_hashes/serde"]

[dependencies]
syscoin-bech32 = "0.8.4"
byteorder = "1.2"
rand = "0.3"
bitcoin_hashes = "0.3"
bitcoinconsensus = { version = "0.16", optional = true }

[dependencies.serde]
version = "1"
optional = true

[dependencies.strason]
version = "0.4"
optional = true
default-features = false

[dependencies.hex]
version = "=0.3.2"

[dependencies.secp256k1]
version = "0.12"
features = [ "rand" ]
